Navigation Spacing Bug Fixed

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -9,14 +9,14 @@
 }
 
 .navbar {
-    display: grid;
+    // display: grid;
     grid-template-columns: 1fr 3fr;
-    align-items: center;
+    // align-items: center;
     height: 50px;
     overflow: hidden;
     z-index: 1000;
     img{
-        height: 16px;
+        height: 1.5em;
         width: auto;
         justify-self: start;
         margin-left: 20px;
@@ -24,8 +24,13 @@
     ul{
         list-style: none;
         display: grid;
-        grid-template-columns: repeat(6,1fr);
+        grid-template-columns: repeat(5,1fr);
         justify-self: end;
+        text-align: center;
+        .nav-item{
+            padding: 0;
+            margin: 0.1em 0.5em;
+        }
     }
     a {
         color: variables.$text-dark-mode;
@@ -35,13 +40,12 @@
         transition: color 0.3s ease-out;
         &:hover{
             color: variables.$primary;
-
         }
     }
 }
 
 // Search Function
-#search-icon {
+.search-icon {
     font-size: 0.9rem;
     margin-top: 3px;
     margin-left: 15px;
@@ -64,8 +68,9 @@
 
 .search-input {
     position: absolute;
+    display: none;
     top: -4px;
-    right: -200px;
+    right: -1000px;
     opacity: 0;
     z-index: -1;
     transition: opacity 0.6s ease;
