--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -170,15 +170,13 @@
 }
 
 .navbar {
-  display: grid;
   grid-template-columns: 1fr 3fr;
-  align-items: center;
   height: 50px;
   overflow: hidden;
   z-index: 1000;
 }
 .navbar img {
-  height: 16px;
+  height: 1.5em;
   width: auto;
   justify-self: start;
   margin-left: 20px;
@@ -186,8 +184,13 @@
 .navbar ul {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   justify-self: end;
+  text-align: center;
+}
+.navbar ul .nav-item {
+  padding: 0;
+  margin: 0.1em 0.5em;
 }
 .navbar a {
   color: #CBCBCB;
@@ -200,13 +203,13 @@
   color: #F6B93B;
 }
 
-#search-icon {
+.search-icon {
   font-size: 0.9rem;
   margin-top: 3px;
   margin-left: 15px;
   transition: color 0.3s ease-out;
 }
-#search-icon:hover {
+.search-icon:hover {
   cursor: pointer;
 }
 
@@ -223,8 +226,9 @@
 
 .search-input {
   position: absolute;
+  display: none;
   top: -4px;
-  right: -200px;
+  right: -1000px;
   opacity: 0;
   z-index: -1;
   transition: opacity 0.6s ease;
